--- a/.gitignore
+++ b/.gitignore
@@ -76,12 +76,9 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+# Exclude all env files recursively
+**/.env*
+.env*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -97,8 +94,6 @@ dist
 
 # Gatsby files
 .cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
 # vuepress build output
@@ -133,20 +128,12 @@ dist
 .pnp.*
 
 ### Node Patch ###
-# Serverless Webpack directories
 .webpack/
-
-# Optional stylelint cache
-
-# SvelteKit build / generate output
-.svelte-kit
 
 ### react ###
 .DS_*
 **/*.backup.*
 **/*.back.*
-
-node_modules
 
 *.sublime*
 
