--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
     "@tiptap/extension-code-block-lowlight": "^2.11.7",
     "@tiptap/extension-color": "^2.11.7",
@@ -63,13 +64,17 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
+    "react-markdown": "^10.1.0",
     "react-medium-image-zoom": "^5.2.14",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
