--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -63,6 +63,7 @@
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.6.3",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
