--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,20 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@excalidraw/excalidraw": "^0.18.0",
-    "@lexical/code": "^0.29.0",
-    "@lexical/file": "^0.29.0",
-    "@lexical/hashtag": "^0.29.0",
-    "@lexical/link": "^0.29.0",
-    "@lexical/list": "^0.29.0",
-    "@lexical/markdown": "^0.29.0",
-    "@lexical/overflow": "^0.29.0",
-    "@lexical/react": "^0.29.0",
-    "@lexical/rich-text": "^0.29.0",
-    "@lexical/selection": "^0.29.0",
-    "@lexical/table": "^0.29.0",
-    "@lexical/text": "^0.29.0",
-    "@lexical/utils": "^0.29.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -41,46 +27,22 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
-    "@tiptap/extension-code-block-lowlight": "^2.11.7",
-    "@tiptap/extension-color": "^2.11.7",
-    "@tiptap/extension-heading": "^2.11.7",
-    "@tiptap/extension-horizontal-rule": "^2.11.7",
-    "@tiptap/extension-image": "^2.11.7",
-    "@tiptap/extension-link": "^2.11.7",
-    "@tiptap/extension-placeholder": "^2.11.7",
-    "@tiptap/extension-text-style": "^2.11.7",
-    "@tiptap/extension-typography": "^2.11.7",
-    "@tiptap/extension-underline": "^2.11.7",
-    "@tiptap/pm": "^2.11.7",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "katex": "^0.16.21",
-    "lexical": "^0.29.0",
-    "lodash-es": "^4.17.21",
-    "lowlight": "^3.3.0",
     "lucide-react": "^0.487.0",
     "motion": "^12.6.3",
-    "next-themes": "^0.4.6",
-    "prismjs": "^1.30.0",
     "react": "^19.0.0",
-    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
-    "react-error-boundary": "^5.0.0",
-    "react-markdown": "^10.1.0",
-    "react-medium-image-zoom": "^5.2.14",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.0",
     "react-syntax-highlighter": "^15.6.1",
-    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "next-themes": "^0.4.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
