Removed lang support

--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "5431:5432"
 
   backend:
-    image: textshare.azurecr.io/textshare-backend:latest
+    build: .
     container_name: node-backend
     environment:
       PORT: ${PORT}
@@ -25,5 +25,7 @@ services:
       - "3000:3000"
     env_file:
       - .env
+    volumes:
+      - ./:/app
     depends_on:
       - db
